[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PySGM-jp"
version = "0.1.9.0"
authors = [
  { name="Hiroyuki Goto", email="goto@catfish.dpri.kyoto-u.ac.jp" },
]
description = "強震動データの解析・処理用ライブラリ"
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]

[project.urls]
Documentation = "https://hirougoto.github.io/PySGM/"
Repository = "https://github.com/HiroUgoto/PySGM"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]